# PydanticAIMCP

./: .gitignore  LOGFIRE_SETUP.md  MCP_BIGQUERY_README.md  README.md  check_mcp_stdio.py  debug_test_client.py  logfire_example.py  mcp_bigquery_solution.py  mcp_bigquery_troubleshooting.md  pydantic_bigquery_plan.md  requirements.txt  run_bigquery_server.py  simple_bigquery_client.py  simple_test_client.py  test_logfire.py
mcp-bigquery/: pyproject.toml
mcp-bigquery/examples/: claude_config_example.json  claude_config_with_env_file.json  test_client.py
mcp_client/: chat_app.py
mcp_client/example_chat/: .chat_app_messages.sqlite
